fix: corrige Dockerfile e docker-compose